--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:tailwind": "tailwindcss build src/tailwind.css -o src/tailwind.output.css"
+    "tailwind": "npx tailwindcss -i src/tailwind.css -o src/tailwind.output.css --watch"
   },
   "eslintConfig": {
     "extends": [
